--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   assets:
     - lib/assests/splashscreen_images/
     - lib/assests/sliderscreen_images/
+    - lib/assests/loginscreen_images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
